Banner implementado y refactorizacion de codigo

--- a/app/src/main/res/layout/actividad_pantalla_principal.xml
+++ b/app/src/main/res/layout/actividad_pantalla_principal.xml
@@ -29,9 +29,9 @@
         android:layout_height="wrap_content"
         android:background="@color/dark_main_color"
         android:textAlignment="center"
-        app:itemIconTint="@color/white"
+        app:itemIconTint="@drawable/selector_color_menu"
+        app:itemTextColor="@drawable/selector_color_menu"
         app:itemPaddingBottom="10dp"
-        app:itemTextColor="@color/white"
         app:labelVisibilityMode="selected"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
