--- a/app/src/main/res/drawable/ic_fill_buscar.xml
+++ b/app/src/main/res/drawable/ic_fill_buscar.xml
@@ -1,7 +1,15 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="#000000" android:pathData="M10,10m-8,0a8,8 0,1 1,16 0a8,8 0,1 1,-16 0"/>
-      
-    <path android:fillColor="#000000" android:pathData="M21.71,21.71a1,1 0,0 1,-1.42 0L15.61,17A8.67,8.67 0,0 0,17 15.61l4.68,4.68A1,1 0,0 1,21.71 21.71Z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
+    <path
+        android:fillColor="#000000"
+        android:pathData="M10,10m-8,0a8,8 0,1 1,16 0a8,8 0,1 1,-16 0" />
+
+    <path
+        android:fillColor="#000000"
+        android:pathData="M21.71,21.71a1,1 0,0 1,-1.42 0L15.61,17A8.67,8.67 0,0 0,17 15.61l4.68,4.68A1,1 0,0 1,21.71 21.71Z" />
+
 </vector>
