--- a/app/src/main/res/drawable/selector_ic_buscar.xml
+++ b/app/src/main/res/drawable/selector_ic_buscar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:drawable="@drawable/ic_fill_buscar" />
-    <item android:state_checked="false" android:drawable="@drawable/ic_outline_buscar" />
+    <item android:drawable="@drawable/ic_fill_buscar" android:state_checked="true" />
+    <item android:drawable="@drawable/ic_outline_buscar" android:state_checked="false" />
 </selector>
