Detalle pelicula implementada y funcional

--- a/app/src/main/res/layout/modal_modificar_perfil.xml
+++ b/app/src/main/res/layout/modal_modificar_perfil.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="@color/material_background"
+    android:backgroundTint="@color/dark_main_color"
     app:cardCornerRadius="20dp"
     app:cardElevation="10dp">
 
@@ -31,14 +31,15 @@
             android:id="@+id/txt_MMP_NuevoNombre"
             android:layout_width="match_parent"
             android:layout_marginTop="20dp"
-            android:background="@drawable/background_edittext"
+            android:background="@drawable/background_edittext_light"
+            android:elevation="20sp"
             android:hint="Nombre de perfil"
             android:inputType="textPersonName"
             android:padding="10dp"
             android:paddingStart="20sp"
             android:paddingEnd="20sp"
             android:textColor="@color/white"
-            android:textColorHint="@color/dark_white"
+            android:textColorHint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/lbl_MMP_Titulo" />
@@ -47,7 +48,8 @@
             android:id="@+id/txt_MMP_ClaveActual"
             android:layout_width="match_parent"
             android:layout_marginTop="20dp"
-            android:background="@drawable/background_edittext"
+            android:background="@drawable/background_edittext_light"
+            android:elevation="20sp"
             android:hint="Contraseña actual"
             android:inputType="textPassword"
             android:padding="10dp"
@@ -55,7 +57,7 @@
             android:layout_height="50sp"
             android:paddingEnd="20sp"
             android:textColor="@color/white"
-            android:textColorHint="@color/dark_white"
+            android:textColorHint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_MMP_NuevoNombre" />
@@ -64,7 +66,8 @@
             android:id="@+id/txt_MMP_ClaveNueva"
             android:layout_width="match_parent"
             android:layout_marginTop="20dp"
-            android:background="@drawable/background_edittext"
+            android:background="@drawable/background_edittext_light"
+            android:elevation="20sp"
             android:hint="Nueva contraseña"
             android:inputType="textPassword"
             android:padding="10dp"
@@ -72,7 +75,7 @@
             android:layout_height="50sp"
             android:paddingEnd="20sp"
             android:textColor="@color/white"
-            android:textColorHint="@color/dark_white"
+            android:textColorHint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/txt_MMP_ClaveActual" />
