--- a/app/src/main/res/drawable/background_edittext_light.xml
+++ b/app/src/main/res/drawable/background_edittext_light.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/dark_main_color" />
-            <corners android:radius="20sp" />
+            <solid android:color="@color/material_dynamic_neutral40" />
+            <corners android:radius="50sp" />
         </shape>
     </item>
 </selector>
