--- a/app/src/main/res/layout/componente_view_holder_actors.xml
+++ b/app/src/main/res/layout/componente_view_holder_actors.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
->
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/Lbl_VC_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TitleTxt"
-        android:padding="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textColor="@color/white"
+    <ImageView
+        android:id="@+id/Iv_CVHA_ImagenActor"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginEnd="283dp"
+        android:layout_marginBottom="603dp"
+        android:layout_margin="5dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/background_cat"
-        />
+        tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
