--- a/app/src/main/res/layout/fragmento_principal.xml
+++ b/app/src/main/res/layout/fragmento_principal.xml
@@ -22,27 +22,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/editTextText"
-                android:layout_width="match_parent"
-                android:layout_height="50sp"
-                android:background="@drawable/background_edittext"
-                android:drawableStart="@drawable/ic_outline_buscar"
-                android:drawablePadding="10dp"
-                android:drawableTint="@color/sub_sub_sub_color"
-                android:ems="10"
-                android:hint="Buscar"
-                android:inputType="text"
-                android:paddingStart="20sp"
-                android:paddingEnd="20sp"
-                android:text=""
-                android:textColor="@color/white"
-                android:textColorHint="@color/sub_sub_sub_color" />
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginTop="24dp">
+                android:layout_height="200dp">
 
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/Vp_FP_ViewPagerSlider"
