--- a/app/src/main/res/layout/modal_cancelar_confirmar.xml
+++ b/app/src/main/res/layout/modal_cancelar_confirmar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="@color/material_background"
+    android:backgroundTint="@color/dark_main_color"
     app:cardCornerRadius="20dp"
     app:cardElevation="50dp">
 
