--- a/app/src/main/res/layout/actividad_detalle_film.xml
+++ b/app/src/main/res/layout/actividad_detalle_film.xml
@@ -28,11 +28,28 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:scaleType="centerCrop"
-                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintDimensionRatio="13:16"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <View
+                android:id="@+id/view"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:background="@drawable/background_top_gradient"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/Iv_ADF_ImagenPortada" />
+
+            <View
+                android:id="@+id/view2"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:background="@drawable/background_bottom_gradient"
+                app:layout_constraintBottom_toBottomOf="@+id/Iv_ADF_ImagenPortada"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraintLayout2"
                 android:layout_width="match_parent"
@@ -82,8 +99,12 @@
                 android:id="@+id/constraintLayout3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                app:layout_constraintBottom_toBottomOf="@+id/Iv_ADF_ImagenPortada">
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="5dp"
+                app:layout_constraintBottom_toBottomOf="@+id/Iv_ADF_ImagenPortada"
+                app:layout_constraintEnd_toStartOf="@+id/Iv_ADF_ImagenPortada"
+                app:layout_constraintStart_toEndOf="@+id/Iv_ADF_ImagenPortada">
 
                 <TextView
                     android:id="@+id/Lbl_ADF_MovieStar"
@@ -119,7 +140,8 @@
                 android:id="@+id/Lbl_ADF_MovieName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginBottom="5dp"
                 android:text="TextView"
                 android:textColor="@color/white"
                 android:textSize="20sp"
@@ -201,8 +223,8 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/scrollView2"
-        app:layout_constraintEnd_toEndOf="@id/scrollView2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/scrollView2" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
