refactorizacion de codigo

--- a/app/src/main/res/layout/fragmento_principal.xml
+++ b/app/src/main/res/layout/fragmento_principal.xml
@@ -7,7 +7,7 @@
     android:background="@color/main_color"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context="Fragmentos.FragmentoPrincipal">
+    tools:context="Vistas.FragmentoPrincipal">
 
 
     <ScrollView
