--- a/app/src/main/res/layout/actividad_pantalla_principal.xml
+++ b/app/src/main/res/layout/actividad_pantalla_principal.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_color"
-    tools:context="Home.ActividadPantallaPrincipal">
+    tools:context="Vistas.ActividadPantallaPrincipal">
 
     <FrameLayout
         android:id="@+id/frm_APP_App"
