--- a/app/src/main/res/layout/fragmento_perfil.xml
+++ b/app/src/main/res/layout/fragmento_perfil.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_color"
-    tools:context="Fragmentos.FragmentoPerfil">
+    tools:context="Vistas.FragmentoPerfil">
 
     <LinearLayout
         android:layout_width="match_parent"
