--- a/app/src/main/res/layout/actividad_detalle_film.xml
+++ b/app/src/main/res/layout/actividad_detalle_film.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_color"
-    tools:context="ConAPI.ActividadDetalleFilm">
+    tools:context="Vistas.ActividadDetalleFilm">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView2"
@@ -79,7 +79,7 @@
                     tools:ignore="ContentDescription" />
 
                 <ImageView
-                    android:id="@+id/imageView2"
+                    android:id="@+id/Iv_ADF_favorito"
                     android:layout_width="0dp"
                     android:layout_height="50dp"
                     android:background="@drawable/background_edittext_light"
