--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,12 +5,12 @@
     <color name="red">#C80000</color>
     <color name="green">#0EAA61</color>
 
-    <color name="main_color">#0A192C</color>
+    <color name="main_color">#040A11 </color>
     <color name="sub_color">#D16100</color>
     <color name="sub_sub_color">#F6DCAC</color>
     <color name="sub_sub_sub_color">#FEAE6F</color>"
-    
-    <color name="dark_main_color">#040A11</color>
+
+    <color name="dark_main_color">#0A1C32</color>
     <color name="dark_white">#908E8E</color>
     <color name="material_background">#494458</color>
 </resources>
